--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         FoundationPress
+Theme Name:         Harveys using FoundationPress
 Theme URI:          http://foundationpress.olefredrik.com
 Github Theme URI:   https://github.com/olefredrik/FoundationPress
 Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
 Version:            5.5.1
-Author:             Ole Fredrik Lie
+Author:             Pete Murray Ole Fredrik Lie
 Author URI:         http://olefredrik.com/
 
 License:            MIT License
