--- a/scss/site/_global.scss
+++ b/scss/site/_global.scss
@@ -25,10 +25,19 @@ letter-spacing: -0.02em;
 
 .harvey-sub-head-wrap {
     background: #ffffff;
+    padding: 2em 0;
 }
 
 
 //----------CONTENT AREA-------------------------//
+
+.line {
+    margin-bottom: 1em !important;
+}
+
+section[role="document"]{
+    margin-top:1.5rem;
+}
 
 // Reset margin and padding on figure element
 figure { 
@@ -73,8 +82,52 @@ img.alignright {
 	margin: rem-calc(7) 0 rem-calc(7) rem-calc(24);
 }
 
-//----------FOOTER-------------------------//
+.content-area-box{
+    box-shadow: 1px 1px 2px 1px rgba(238, 238, 238 ,0.6);
+    border:1px solid #eee;
+    display: inline-block;
+    font-size:0px;
+    max-width:350px;
+    img {
+        box-shadow: none;
+        float:none;
+        margin:0;
+        border-bottom: 0;
+    }
+    p {
+        font-size: 0;
+        margin-bottom:0;
+    }
+    h4{
+        border: 0;
+        margin: 0;
+        margin-bottom:3px;
+        color:$primary-color;
+        font-weight:normal;
+        line-height:1.3;
+        font-size: rem-calc(17);
+    }
 
-.harveys-foot-wrap{
-    background: $primary-color;
 }
+.content-area-box-caption {
+        background:#fcfcfc;
+        padding: 5px 10px;
+        border-radius: 0px 0px 3px 3px;
+        font-family: $font-family-serif;
+        color: #3B3B3B;
+        font-weight: normal;
+        font-size: rem-calc(14);
+    p {
+        font-size: rem-calc(14);
+        line-height:1.3;
+    }
+}
+    
+
+
+//------------ASIDES---------------//
+
+aside[id="sidebar"]{
+    margin-top:0.8rem;
+}
+
