Changes I'd not caught up with

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         Harveys ( FoundationPress)
+Theme Name:         Harveys ( FoundationPress 5)
 Theme URI:          http://foundationpress.olefredrik.com
 Github Theme URI:   https://github.com/olefredrik/FoundationPress
 Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
